test/errors/type/float/tofloat.yasl
echo 0.0.tofloat(1)
